fix: product price gap

--- a/src/styles/components/_product-card.scss
+++ b/src/styles/components/_product-card.scss
@@ -27,6 +27,8 @@
 }
 
 .product-price {
+  display: flex;
+  gap: 4px;
   font-weight: 500;
   margin-bottom: 1rem;
 
